--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   },
