--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
