--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -26,10 +26,10 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-    - run: npm ci
+      run: npm ci
     
     - name: Run build
-    - run: npm run build --if-present
+      run: npm run build --if-present
     
     - name: Run unit tests
-    - run: npm test
+      run: npm test
