--- a/.github/workflows/build_push_image.yml
+++ b/.github/workflows/build_push_image.yml
@@ -1,12 +1,17 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches: [main, develop]
+  workflow_run:
+    workflows: ["Build and Test"]
+    types:
+      - completed
+    branches: [main]
 
 jobs:
   build_push_image:
     runs-on: ubuntu-latest
+
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Checkout code
